# RINet

./: .gitignore  LICENSE  README.md  database.py  eval.py  gen_pairs.py  gen_pairs_kitti360.py  net.py  train.py
gen_desc/: CMakeLists.txt  kitti_gen.cpp
gen_desc/conf/: sem_config.yaml
gen_desc/gen_cloud/: CMakeLists.txt  genData.cpp  genData.hpp  semanticConf.cpp  semanticConf.hpp  types.hpp
model/00/: model_test0.9867699729551933.pth
model/06/: model_test0.9946048873373531.pth
model/08/: model_test0.9675291730086251.pth
model/attention/0000/: model_test0.9902580578298269.pth
model/attention/0005/: model_test0.9994389624104816.pth
model/attention/kitti/00/: model_test0.992849846782431.pth
model/attention/kitti/02/: model_test0.9297736506094022.pth
model/attention/kitti/05/: model_test0.9504373177842564.pth
model/attention/kitti/06/: model_test0.9990497307570478.pth
model/attention/kitti/07/: model_test0.9856095574260114.pth
model/attention/kitti/08/: model_test0.9686638255201805.pth
model/attention/kitti_360/0000/: model_test0.9910755979868209.pth
model/attention/kitti_360/0002/: model_test0.9986411301694742.pth
model/attention/kitti_360/0004/: model_test0.9990055774136366.pth
model/attention/kitti_360/0006/: model_test0.9995828336027534.pth
model/attention/kitti_360/0009/: model_test0.9972647562565505.pth
model/without_attention/kitti/00/: model_test0.9905969822873387.pth
model/without_attention/kitti/02/: model_test0.907958085528179.pth
model/without_attention/kitti/05/: model_test0.9254678778592534.pth
model/without_attention/kitti/06/: model_test0.9980976537729866.pth
(+7 files in other folders)
